# nonebot-plugin-cnrail

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
nonebot_plugin_cnrail/: __init__.py  __main__.py  base.py  config.py  data_source.py  debug.py  help.py  models.py  render.py  utils.py
nonebot_plugin_cnrail/res/assets/: index.css  index.mjs
nonebot_plugin_cnrail/res/templates/: train_table.html.jinja
nonebot_plugin_cnrail/templates/: template.html.jinja  train_table.html.jinja
nonebot_plugin_cnrail/templetes/: train_info.jinja
nonebot_plugin_example/: __init__.py
template_js/: package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json
template_js/scripts/: copy-to-assets.cjs  tsconfig.json
template_js/src/: index.ts
