[project]
name = "nonebot-plugin-cnrail"
dynamic = ["version"]
description = "NoneBot2 plugin for query the train time table"
authors = [
    { name = "LgCookie", email = "lgc2333@126.com" },
    { name = "XieXiLin", email = "support@xiexilin.com" },
]
dependencies = [
    "nonebot2>=2.4.1",
    "httpx>=0.27.2",
    "nonebot-plugin-alconna>=0.54.2",
    "nonebot-plugin-htmlrender>=0.5.1",
    "jinja2>=3.1.5",
    "pytz>=2025.1",
    "cookit[jinja,loguru,playwright,pyd]>=0.9.3",
]
requires-python = ">=3.9,<4.0"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
homepage = "https://github.com/lgc-NB2Dev/nonebot-plugin-cnrail"

[tool.pdm.build]
includes = []

[tool.pdm.version]
source = "file"
path = "nonebot_plugin_cnrail/__init__.py"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
