[project]
name = "nonebot-plugin-cnrail"
dynamic = ["version"]
description = "NoneBot2 plugin for query the train time table"
authors = [
    { name = "LgCookie", email = "lgc2333@126.com" },
    { name = "XieXiLin", email = "support@xiexilin.com" },
]
dependencies = [
    "nonebot2>=2.4.3",
    "httpx>=0.28.1",
    "nonebot-plugin-alconna>=0.59.4",
    "nonebot-plugin-htmlrender>=0.6.6",
    "jinja2>=3.1.6",
    "pytz>=2025.2",
    "cookit[jinja,loguru,playwright,pyd]>=0.13.0",
]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
homepage = "https://github.com/lgc-NB2Dev/nonebot-plugin-cnrail"

[tool.pdm.build]
includes = []

[tool.pdm.version]
source = "file"
path = "nonebot_plugin_cnrail/__init__.py"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
